# nexusql

./: .gitignore  INSTALLATION.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: DATABASE_ABSTRACTION_GUIDE.md  DATABASE_ABSTRACTION_QUICKREF.md  DATABASE_MIGRATION_VISUAL.md  DATABASE_PACKAGE_EXTRACTION_GUIDE.md  DATABASE_REFERENCE.md  DATABASE_TESTING_GUIDE.md  FINAL_ANSWER_QUERY_IMPACT.md  FORWARD_LOOKING_DATABASE_REQUIREMENTS.md  MIGRATION_TO_NEXUSQL.md  MULTI_DATABASE_QUERY_COMPATIBILITY.md  NEXUSQL_EXTRACTION_SUMMARY.md  POTENTIAL_DATABASE_ISSUES.md  QUERY_COMPARISON_GUIDE.md  ROADMAP.md
nexusql/: __init__.py  interfaces.py  manager.py  migrations.py
nexusql/migrations/: V001__complete_schema.sql  V002__hitl_schema.sql
tests/: __init__.py  conftest.py  docker-compose.test.yml
tests/integration/: __init__.py  test_binary_data.py  test_concurrency.py  test_database_complete.py  test_database_comprehensive.py  test_database_edge_cases.py  test_database_mssql.py  test_database_multi_backend.py  test_database_mysql.py  test_database_param_order.py  test_execute_script.py
tests/unit/: __init__.py  test_database_advanced_performance.py  test_database_advanced_security.py  test_database_concurrency.py  test_database_edge_cases.py  test_database_manager.py  test_database_performance.py  test_database_security.py  test_sql_splitting.py
